# rust_todo_axum_mongo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  nginx.conf  run.sh  todo_client.http  todo_client_backend.http
src/: handlers.rs  lib.rs  main.rs  models.rs  mongoservices.rs  services.rs
src/route_handlers/: category_handlers.rs  mod.rs  todo_handlers.rs
src/routers/: category_router.rs  mod.rs  todo_router.rs
